tests/tooling/fixtures/native/recovery/positive/message_send_numeric_zero_receiver_non_elided.objc3
// Positive fixture: numeric zero receiver is non-elided and keeps runtime dispatch branch/call shape.
module MessageSendNumericZeroReceiverNonElided;

fn main() {
  let sent = [0 ping];
  return sent + 4;
}
