tests/tooling/fixtures/native/recovery/negative/negative_separator_literal_global_divide_by_zero.objc3
// Expected diagnostic code(s): O3S210.
module NegativeSeparatorLiteralGlobalDivideByZero;

let value = 1_0 / 0_0;

fn main() -> i32 {
  return value;
}
